# mappero

./: .gitignore  .gitlab-ci.yml  INSTALL  Makefile.am  README.md  common-config.pri  configure.ac  mappero.pro  mappero.qbs
data/: Makefile.am  MapperoInfo.plist  MapperoInfo.plist.in  it.mardy.mappero-geotagger.metainfo.xml  maemo-mapper.desktop  mappero-geotagger.desktop  mappero-geotagger.desktop.in  mappero-mime.xml  mappero.desktop  mappero.desktop.in  repositories.xml  tile_sources.xml
data/icons/scalable/: create-nav-icon.sh  icons-geotag.qrc  icons.qrc
data/icons/scalable/directions/: directions.qrc
data/icons/scalable/transport/: transport.qrc
data/icons/windows/: mappero-geotagger.rc
data/sounds/: Makefile.am  first-exit.spx  second-exit.spx  slight-left.spx  slight-right.spx  straight.spx  third-exit.spx  turn-left.spx  turn-right.spx
data/sounds/de_DE/: first-exit.spx  second-exit.spx  slight-left.spx  slight-right.spx  straight.spx  third-exit.spx  turn-left.spx  turn-right.spx
data/sounds/en_US/: Makefile.am  first-exit.spx  second-exit.spx  slight-left.spx  slight-right.spx  straight.spx  third-exit.spx  turn-left.spx  turn-right.spx
data/sounds/fi_FI/: first-exit.spx  second-exit.spx  slight-left.spx  slight-right.spx  straight.spx  third-exit.spx  turn-left.spx  turn-right.spx
debian/: .gitignore  changelog  control  libmappero-dev.install  libmappero0.install  maemo-mapper.install  maemo-mapper.postrm  qtdesktopcomponents.tar.bz2  rules
lib/: lib.pro
lib/Mappero/: .gitignore  Mappero.pc.in  Mappero.pro  Mappero.qbs  RoutingPlugin  SearchPlugin  debug.h  global.h  gpx.cpp  gpx.h  kml.cpp  kml.h  libmappero.qrc  model-aggregator.cpp  model-aggregator.h  path-builder.cpp  path-builder.h  path.cpp  path.h  plugin.cpp  plugin.h  poi-model.cpp  poi-model.h  projection.cpp  projection.h  qml-search-model.cpp  qml-search-model.h  routing-model.cpp  routing-model.h  routing-plugin.cpp  routing-plugin.h  search-plugin.cpp  search-plugin.h  types.cpp  types.h  utils.cpp  utils.h
lib/MapperoUi/: .gitignore  MapperoUi.pc.in  MapperoUi.pro  MapperoUi.qbs  debug.h  global.h  types.cpp  types.h
mappero/: Makefile.am  debug.c  debug.h  error.c  error.h  globals.h  gpx.c  gpx.h  kml.c  kml.h  loader.c  loader.h  mappero.pc.in  path.c  path.h  poi.h  router.c  router.h  util.c  util.h  viewer.c  viewer.h
mappero-extras/: Makefile.am  dialog.c  dialog.h  error.c  error.h
plugins/: Makefile.am  gnuite.c  gnuite.h  google.c  google.h  reittiopas.c  reittiopas.h  yandex.c
po/: POTFILES.in  bg_BG.po  de_DE.po  en_US.po  es_ES.po  fi_FI.po  it_IT.po  nl_NL.po  ru_RU.po  sv_SE.po  template.pot  zh_CN.po
qbs/imports/: CoverageClean.qbs  CoverageReport.qbs  QmlPlugin.qbs  Test.qbs
qtc_packaging/debian_fremantle/: README  changelog  control  copyright  rules
qtc_packaging/debian_harmattan/: README  changelog  control  copyright  manifest.aegis
src/: Makefile.am  address-picker.c  cmenu.c  cmenu.h  controller-priv.h  controller.c  controller.h  data.c  data.h  dbus-ifc.c  dbus-ifc.h  debug.c  debug.h  defines.h  dialog.c  dialog.h  display.c  display.h  error.c  error.h  gps.c  gps.h  gpsbt.c  gpsbt.h  gpx.c  gpx.h  he-about-dialog.c  input.c  input.h  main.c  main.h  maps.c  maps.h  mark.c  mark.h  menu.c  menu.h  navigation.c  navigation.h  orientation.c  (+29 more)
src/hildon/: .gitignore  address-picker.c  address-picker.h  controller-priv.h  controller.c  data.c  data.h  dbus-ifc.c  defines.h  display.c  display.h  gps.c  he-about-dialog.h  maps.c  maps.h  mark.c  mark.h  marshal.c  marshal.h  menu.c  menu.h  navigation.c  orientation.c  orientation.h  osm.h  path.c  path.h  poi.c  poi.h  repository.c  repository.h  route.c  screen.c  settings.h  sign.c  tile.c  tile.h  tile_source.c  types.h  util.h
src/plugins/: google.c  google.h  plugins.qbs  reittiopas.c  reittiopas.h  yandex.c  yandex.h
src/qml/: BusyMessage.qml  Button.qml  Correlator.qml  FileTools.qml  GeoSetter.qml  GeoTagPage.qml  Help.qml  ImageButton.qml  ImagePoi.qml  ItemAction.qml  LayerManager.qml  LayerSelector.qml  ListBrowser.qml  MainPage.qml  Map.qml  MapControls.qml  MapFlickable.qml  MenuButton.qml  Osm.qml  OsmButton.qml  OsmTrackItem.qml  Pane.qml  PaneBackground.qml  PaneButton.qml  PluginSelector.qml  PoiActions.qml  PoiBrowser.qml  PoiBrowserDelegate.qml  Popup.qml  RouteActions.qml  RouteBrowser.qml  RouteItems.qml  RouteOptions.qml  RoutePluginChooser.qml  Router.qml  RouterDialog.qml  SearchBox.qml  SearchPluginChooser.qml  SearchPluginSelector.qml  Selector.qml  (+16 more)
src/qt/: .gitignore  Makefile.am  application.cpp  application.h  configuration.cpp  configuration.h  controller.cpp  controller.h  debug.h  gps.cpp  gps.h  gpx.cpp  gpx.h  kml.cpp  kml.h  layer.cpp  layer.h  main.cpp  map-object.cpp  map-object.h  map.cpp  map.h  mark.cpp  mark.h  osm.cpp  osm.h  path-item.cpp  path-item.h  path-layer.cpp  path-layer.h  path.cpp  path.h  plugin-manager.cpp  plugin-manager.h  plugin-model.cpp  plugin-model.h  poi-item.cpp  poi-item.h  poi-view.cpp  poi-view.h  (+28 more)
src/qt/android/: AndroidManifest.xml
src/qt/qml/: BusyMessage.qml  Correlator.qml  FileTools.qml  GeoSetter.qml  GeoTagPage.qml  Help.qml  ItemAction.qml  LayerManager.qml  LayerSelector.qml  MainPage.qml  Map.qml  MapControls.qml  MapFlickable.qml  Osm.qml  OsmPathItem.qml  PaneButton.qml  PoiBrowser.qml  RouteActions.qml  RouteItems.qml  RoutePluginChooser.qml  Router.qml  RouterDialog.qml  SearchBox.qml  SearchPluginChooser.qml  TaggableDelegate.qml  TaggableView.qml  TiledMaps.qml  TimeSlider.qml  TimeZoneOffset.qml  ToolBar.qml  ToolTip.qml  ToolTipParentHandler.qml  UIConstants.js  WayPointView.qml  geotag.qrc  harmattan.qrc  mappero.qml  qml.qrc  qmldir
src/qt/qml/harmattan/: FileDialog.qml  FileDialogDialog.qml  Osm.qml  SettingsDialog.qml  mappero.qml
src/qtscroller/: .gitignore
tests/: .gitignore  fake_network.h  tests.pri  tests.pro  tests.qbs  tst_updater.cpp  tst_updater.qbs
tests/geotagging/: .gitignore  geotag-test.cpp  geotag-test.h  geotagging.pro
tests/path/: .gitignore  HelsinkiTikkurila.kml  (+8 more)
(+54 files in other folders)
